# microservices-go

./: .gitignore  LICENSE  Makefile  Readme.md  docker-compose.yml  go.mod  go.sum
cmd/microservice/: main.go
cmd/user-microservice/: main.go
contracts/schemas/: video_stats.jsonschema
db/migrations/: 000001_create_users_table.up.sql  000002_create_items_table.up.sql  000003_create_bids_table.up.sql
db/seeds/: seed.sql
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: AIInsights.tsx  ContentFeed.tsx  DashboardView.tsx  Login.tsx  Sidebar.tsx  TrendChart.tsx  TrendFeedView.tsx  (+1 more)
infrastructure/: .env.example  Makefile  docker-compose.yml
postgres-init/: init-db.sh
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/v1/: router.py
services/api-gateway/app/api/v1/endpoints/: videos.py
services/api-gateway/app/core/: clients.py  config.py  security.py
services/api-gateway/app/schemas/: video.py
services/api-gateway/app/services/: analyzer.py
services/parsers/tik-tok-parser/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
services/parsers/tik-tok-parser/app/: main.py
services/parsers/tik-tok-parser/app/core/: config.py  kafka_producer.py  message_formatter.py
services/parsers/tik-tok-parser/app/parser/: tiktok_parser.py
services/parsers/tik-tok-parser/scripts/: actors.json  seed_database.py
services/parsers/tik-tok-parser/src/: message_formatter.py  tiktok_parser.py
(+45 files in other folders)
